# aoc2021

./: LICENSE  pyproject.toml
01/: main.py
02/: main.py
03/: main.py
04/: main.py
05/: main.py
06/: main.py
07/: main.py
08/: main.py
09/: Cargo.toml
09/src/: main.rs
10/: Cargo.toml
10/src/: main.rs
11/: Cargo.toml
11/src/: main.rs
12/: Cargo.toml
12/src/: main.rs
13/: Cargo.toml
13/src/: main.rs
14/: Cargo.toml
14/src/: main.rs
15/: Cargo.toml
15/src/: main.rs
16/: Cargo.toml
16/src/: main.rs
17/: Cargo.toml
17/src/: main.rs
18/: Cargo.toml
18/src/: main.rs
2020/01/: main.py
